--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
     "uuid": "^11.1.0",
